@@ -4,7 +4,6 @@ import com.github.kjetilv.uplift.flambda.CorsSettings;
 import com.github.kjetilv.uplift.flambda.LocalLambda;
 import com.github.kjetilv.uplift.flambda.LocalLambdaSettings;
 import com.github.kjetilv.uplift.kernel.Env;
-import com.github.kjetilv.uplift.kernel.Time;
 import com.github.kjetilv.uplift.lambda.LambdaClientSettings;
 import com.github.kjetilv.uplift.lambda.LambdaHandler;
 import com.github.kjetilv.uplift.lambda.LamdbdaManaged;
@@ -12,38 +11,38 @@ import com.github.kjetilv.uplift.s3.DefaultS3AccessorFactory;
 import taninim.TaninimSettings;
 import taninim.kudu.KuduLambdaHandler;
 
+import java.time.Clock;
 import java.time.Duration;
+import java.time.Instant;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.function.Supplier;
 
-@SuppressWarnings({"MagicNumber", "resource"})
+@SuppressWarnings({"MagicNumber"})
 public final class LocalLambdaKudu {
 
-    public static void main(String[] args) {
+    static void main(String[] args) {
         CorsSettings corsSettings = new CorsSettings(
             List.of("https://kjetilv.github.io"),
             List.of("GET"),
             List.of("content-type", "range")
         );
 
+        Supplier<Instant> clock = Clock.systemUTC()::instant;
         LocalLambdaSettings settings = new LocalLambdaSettings(
             9002,
             8080,
             8 * 8192,
             10,
             corsSettings,
-            Time.utcSupplier()
+            clock
         );
 
-        LocalLambda localLambda = new LocalLambda(
-            settings,
-            Executors.newVirtualThreadPerTaskExecutor(),
-            Executors.newVirtualThreadPerTaskExecutor()
-        );
+        LocalLambda localLambda = new LocalLambda(settings);
 
         LambdaClientSettings clientSettings =
-            new LambdaClientSettings(Env.actual(), Time.utcSupplier());
+            new LambdaClientSettings(Env.actual(), clock);
 
         TaninimSettings taninimSettings = new TaninimSettings(
             Duration.ofDays(1),
@@ -54,22 +53,18 @@ public final class LocalLambdaKudu {
         LambdaHandler handler = KuduLambdaHandler.create(
             clientSettings,
             taninimSettings,
-            new DefaultS3AccessorFactory(
-                Env.actual(),
-                Executors.newVirtualThreadPerTaskExecutor()
-            )
+            new DefaultS3AccessorFactory(Env.actual())
         );
 
-        Runnable lamdbdaManaged = LamdbdaManaged.create(
-            localLambda.getLambdaUri(),
-            clientSettings,
-            handler,
-            Executors.newVirtualThreadPerTaskExecutor()
-        );
+        Runnable lamdbdaManaged =
+            LamdbdaManaged.create(localLambda.getLambdaUri(), clientSettings, handler);
 
-        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+        try (ExecutorService executor = Executors.newFixedThreadPool(2)) {
+            executor.submit(localLambda);
+            executor.submit(lamdbdaManaged);
+        }
+    }
 
-        executor.submit(localLambda);
-        executor.submit(lamdbdaManaged);
+    private LocalLambdaKudu() {
     }
 }
